tests/fixtures/invalid/chr_bytes.py
# Cannot call chr() with Bytes
x = chr(b"hello")
